Added about me blurb

--- a/index.html
+++ b/index.html
@@ -1,1 +1,37 @@
-Hello World
+<!DOCTYPE html>
+<html lang="en">
+  <head>
+    <link rel="stylesheet"  href="styles.css" />
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@900&display=swap" rel="stylesheet">
+    <header>
+      <!-- <span>Barry Zhang</span>
+      <nav>Menu</nav> -->
+    </header>
+    <div class="about-me-wrapper">
+      <div class="about-me-text">
+        <h1>
+          Hi, I'm Barry
+        </h1>
+        <p class="a">
+          I am currently a senior studying <strong>Computer Science</strong> and minoring in Mathematics at <strong>NYU Tandon School of Engineering</strong>
+          I am proficient in <strong>front-end frameworks</strong>(VueJS, ReactJS, Javascript, HTML, CSS) and <strong>back-end</strong> languages (Python, C++).
+          
+        </p>
+        <p>
+          Currently, I am the Software Development Team Lead at NYU MakerSpace and the Webmaster for NYU Theta Tau. In my free time, I love 
+          exploring the city, vlogging my life, and finding good eats in Manhattan! 
+        </p>
+        <pv>
+          Feel free to reach out!<br>
+          
+          <br>Barry Zhang
+          <br>barry.zhang@nyu.edu
+          <br>linkedin.com/in/barry-zhang-nyu/
+        </pv>
+    </div>
+    <img class="about-me-picture" src="src/headshot.JPG" alt="Headshot">
+  </div>
+  </body>
+</html>
